--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,4 +1,4 @@
-<%= form_for :shout do |form| %>
+<%= form_for @note do |form| %>
 	<%= form.text_field :body, placeholder: 'Note content here' %>
 	<%= form.submit 'Post Note!' %>
 	<% end %>
