--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
    <div>
 	<% if signed_in? %>
 	  <%= link_to current_user.username, dashboard_path %>
+	  <%= link_to 'Student list', students_path %>
 	  <%= link_to 'Sign out' , session_path , method: :delete %>
 	 <% else %>
 	   <%= link_to 'Sign in' , new_session_path %>
