can add student and view student's info page, book scaffolded

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,1 +1,7 @@
 Your Student List
+
+<%= simple_form_for @student do |f| %>
+  <%= f.input :first_name %>
+  <%= f.input :last_name %>
+  <%= f.button :submit %>
+<% end %>
