Toolbar works, new column design on dashboard, forms fixed mostly

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <h2>Students Data</h2>
 
 <br>
@@ -17,3 +18,4 @@
  <%= link_to "#{b.book_name}" "#{b.book_level}", student_book_path(@student,b)%>
  </br>
 <%end%>
+</div>
