--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,3 +1,7 @@
+<div class="row">
+  <div class="col-md-8"></div>
+  
+  <div class="col-md-4">
 
 <%= form_for @note do |form| %>
 	<%= form.text_field :body, placeholder: 'Note content here' %>
@@ -6,8 +10,8 @@
 
 	<%= render @notes %>
 	<%= Date.current %>
-
+</div>
 	
-
+</div>
 	
 	
