--- a/app/views/lessons/_form.html.erb
+++ b/app/views/lessons/_form.html.erb
@@ -1,10 +1,11 @@
+
 <%= simple_form_for(@lesson) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
     <%= f.input :student_id, :as => :hidden, :input_html => {:value => params[:id]}  %>
     <%= f.input :note %>
-    <%= f.input :present %>
+    <%= f.check_box :present %> "Is this student Present?"
     <%= f.input :cal_date, :as => :hidden, :input_html => { :value => Date.current }  %>
     
 
