--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -15,7 +15,7 @@
 
 <% @books.each do |b| %>
 <br>
- <%= link_to "#{b.book_name}" "#{b.book_level}", student_book_path(@student,b)%>
+ <%= link_to "#{b.book_name}" "#{b.book_level}", book_path(b)%>
  </br>
 <%end%>
 </div>
